# railway-bigdata

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  TASK.md  WIRING.md  constraints.txt  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: dashboard-sync-reminder.yml
.planning/: COURSEWORK_PROGRESS.md
.planning/coursework/plans/: GAP-041-uic-widen-and-stage.md
analysis_artifacts/: README.md  correlations_by_country_levels.csv  correlations_pooled_levels.csv  correlations_pooled_panel.csv  manifest_by_country_levels.json  manifest_by_country_panel.json  manifest_pooled_levels.json  manifest_pooled_panel.json  manifest_regional.json
docs/: AGENTIC_WORKFLOW.md  ARCHITECTURE.md  CODEMAP.md  DATA_CONTRACTS.md  GAP_REGISTER.md  GAP_TASKS.md  GOLDEN_SET_PROTOCOL.md  HANDOFF_AUTONOMOUS_RUN.md  INDEX.md  LLM_EXTRACTION_DESIGN.md  MERGE_STRATEGY.md  NEXT_SESSION_HANDOFF.md  NIGHT_KICKOFF.md  OPERATIONS.md  ORCHESTRATION.md  ORGANIZATION_PLAN.md  OVERNIGHT_READINESS.md  PARSER_FIELD_COVERAGE.json  PARSER_FIELD_COVERAGE.md  PARSER_WORK_LOG.md  PIPELINE.md  PROGRESS_LOG.md  ROADMAP_NEWS_TO_REPORT.md  SILVER_DESIGN.md  SPEC_NEWS_PREPROCESSING.md  STATE_AND_ROADMAP.md  TASKS.md  TEST_FIRST_INTEGRATION_PLAN.md  VERIFICATION.md  WAVE_LOG.md  WORKSTREAMS.md  WORK_SPLIT.md  dashboard.html  index.html
output/evidence/analysis-artifacts/: README.md  correlations_by_country_panel.csv  manifest_by_country_levels.json  manifest_by_country_panel.json  manifest_pooled_levels.json  manifest_pooled_panel.json  manifest_regional.json  regional_descriptives.csv  regional_inequality.csv
output/evidence/eurostat-silver-gold/: gold_sample_at_hu.csv  manifest.json
output/evidence/first-real-gold-local-stats-v2/: counts.json  crosswalk_cache.json
output/evidence/fixture-e2e/: crosswalk_cache.json  railway_ml.parquet
output/evidence/gdelt-live-check-2026-06-22/: manifest.json
output/evidence/inventory-live-2026-06-23/: counts.json  crosswalk_cache.json  (+3 more)
output/presentation/: PRESENTATION.md
output/project-organization/: LEARNINGS.md  REPORT.md  SUMMARY.md
output/report/: REPORT.md
scripts/: bronze_volume.py  minio_smoke.py
scripts/orch/: KICKOFF_WAVES_1-3.md  codex_impl.sh  codex_review.sh  lib.sh  lib_run.sh  night.config.sh  run_night.sh  run_wave.sh
src/railway_lakehouse/: __init__.py  pipeline.py  spark_config.py
tests/: README.md  conftest.py  test_bronze_characterization.py  test_bronze_live_check.py  test_bronze_live_check_integration.py  test_bronze_scheduler.py  test_bronze_volume.py  test_env_versions.py  test_eurostat_hardening.py  test_eurostat_silver_reader.py  test_gdelt_rate_limit.py  test_gold_characterization.py  test_gold_load_from_silver.py  test_infra_minio.py  test_macro_indicators.py  test_news_eval_harness.py  test_parser_field_coverage.py  test_parser_imports_and_schemas.py  test_parser_robustness.py  test_pipeline_gaps.py  test_pipeline_live_stats_worldbank.py  test_pipeline_s3_readback.py  test_report_evidence_links.py  test_silver_characterization.py  test_silver_eu_stats_features.py  test_silver_gkg_parser.py  test_silver_language_id.py  test_silver_news_embeddings.py  test_silver_news_embeddings_integration.py  test_silver_news_extract_prompt.py  test_silver_news_extraction_e2e.py  test_silver_news_extraction_live.py  test_silver_news_parsers.py  test_silver_news_sentiment_imports.py  test_silver_news_wide_contract.py  test_silver_parser_golden_fixtures.py  test_silver_persist.py  test_silver_persist_integration.py  test_silver_sentiment_encoder.py  test_silver_stats_integration.py  (+6 more)
tests/fixtures/: news_golden_baseline.json  news_golden_set.README.md  news_golden_set.json  news_synthetic_predictions.json
(+200 files in other folders)
