[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "railway-lakehouse"
version = "0.1.0"
description = "Railway Big Data course project with Bronze, Silver, and Gold lakehouse layers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=15",
  "requests>=2.31",
  "s3fs==2024.6.1",
  "fsspec==2024.6.1",
  "aiobotocore==2.13.1",
  "botocore==1.34.131",
  "schedule>=1.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]
spark = [
  "pyspark>=3.5",
]
ollama = []
dev = [
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "unit: deterministic unit tests that do not require network or services",
  "integration: deterministic cross-layer fixture tests",
  "live: opt-in checks that use real endpoints or services",
  "spark: Spark-dependent checks",
  "slow: long-running checks",
]
