[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "railway-lakehouse"
version = "0.1.0"
description = "Railway Big Data course project with Bronze, Silver, and Gold lakehouse layers."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "pandas>=2.2,<4",
  "pyarrow>=15,<25",
  "requests>=2.31,<3",
  "s3fs==2024.6.1",
  "fsspec==2024.6.1",
  "aiobotocore==2.13.1",
  "botocore==1.34.131",
  "schedule>=1.2,<2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]
# GAP-017: Spark 4.1 requires JDK 17 or 21 with JAVA_HOME set.
# hadoop-aws must equal Spark 4.x's bundled hadoop-client 3.4.1 for s3a.
# It is a JVM/Maven connector pin; pip cannot install hadoop-aws as a wheel.
spark = [
  "pyspark==4.1.*",
  "delta-spark==4.1.*",
  "hadoop-aws==3.4.1; python_version < '0'",
]
ollama = []
dev = [
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "unit: deterministic unit tests that do not require network or services",
  "integration: deterministic cross-layer fixture tests",
  "live: opt-in checks that use real endpoints or services",
  "spark: Spark-dependent checks",
  "slow: long-running checks",
]
