[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "railway-lakehouse"
version = "0.1.0"
description = "Railway Big Data course project with Bronze, Silver, and Gold lakehouse layers."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "pandas>=2.2,<4",
  "openpyxl>=3.1,<4",
  "pdfplumber>=0.11,<1",
  "pyarrow>=15,<25",
  "requests>=2.31,<3",
  "s3fs==2024.6.1",
  "fsspec==2024.6.1",
  "aiobotocore==2.13.1",
  "botocore==1.34.131",
  "schedule>=1.2,<2",
  "transformers>=4.40,<5",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]
# GAP-017: Spark 4.1 requires JDK 17 or 21 with JAVA_HOME set.
# S3A uses JVM/Maven packages, not pip deps; see railway_lakehouse.spark_config.
spark = [
  "pyspark==4.1.*",
  "delta-spark==4.1.*",
]
ollama = []
dev = [
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: deterministic unit tests that do not require network or services",
  "integration: deterministic cross-layer fixture tests",
  "live: opt-in checks that use real endpoints or services",
  "spark: Spark-dependent checks",
  "slow: long-running checks",
]
